Update -01. Introduction to Python.ipynb

--- a/notebooks/-01. Introduction to Python.ipynb
+++ b/notebooks/-01. Introduction to Python.ipynb
@@ -31,12 +31,22 @@
       "if z == 3.45 or y == \"Hello\":\n",
       "    x = x + 1\n",
       "    y = y + \" World\" # String concat.\n",
-      "    print x\n",
-      "    print y"
+      "    print (x)\n",
+      "    print (y)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "12\n",
+        "Hello World\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -82,11 +92,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "2*3"
+      "2 * 3"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "6"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -115,12 +135,26 @@
       "     -h                        Display this usage message\n",
       "     -H hostname               Hostname to connect to\n",
       "\"\"\"\n",
-      "print x\n",
-      "print foo_string"
+      "print (x)\n",
+      "print (foo_string)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3\n",
+        "\n",
+        "Usage: thingy [OPTIONS]\n",
+        "     -h                        Display this usage message\n",
+        "     -H hostname               Hostname to connect to\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -134,19 +168,32 @@
      "collapsed": false,
      "input": [
       "bar = \"hello world welcome to python workshop\"\n",
-      "print bar\n",
+      "print (bar)\n",
       "# Prints first 4 characters\n",
-      "print bar[0:4]\n",
+      "print (bar[0:4])\n",
       "# Prints Everything except first 4 characters\n",
-      "print bar[4:]\n",
+      "print (bar[4:])\n",
       "# Prints the last character\n",
-      "print bar[-1]\n",
+      "print (bar[-1])\n",
       "# Prints Everything except the last two characters\n",
-      "print bar[:-2]"
+      "print (bar[:-2])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "hello world welcome to python workshop\n",
+        "hell\n",
+        "o world welcome to python workshop\n",
+        "p\n",
+        "hello world welcome to python worksh\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -161,12 +208,22 @@
      "input": [
       "string_1 = \"hello \"\n",
       "string_2 = \"world\"\n",
-      "print string_1 + string_2\n",
-      "print 5*string_2"
+      "print (string_1 + string_2)\n",
+      "print (5 * string_2)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "hello world\n",
+        "worldworldworldworldworld\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -208,7 +265,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'foo_element' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-9-50491044c86e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfoo_element\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'foo_element' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -222,11 +291,23 @@
      "collapsed": false,
      "input": [
       "x = y = z = 4\n",
-      "x, y = 4, 2"
+      "print('x =', x, 'y =', y, 'z =', z)\n",
+      "x, y = 4, 2\n",
+      "print('x =', x, 'y =', y, 'z =', z)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "x = 4 y = 4 z = 4\n",
+        "x = 4 y = 2 z = 4\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -251,18 +332,30 @@
      "input": [
       "tu = (23, 'abc', 4.56, (2,3), 'def')\n",
       "# Print first element of tuple\n",
-      "print tu[0]\n",
+      "print (tu[0])\n",
       "# Tuple can be used to assignment also\n",
       "a, b, c, d, e = tu\n",
-      "print b\n",
+      "print (b)\n",
       "# Slicing is same just in strings\n",
-      "print tu[:-2]\n",
+      "print (tu[:-2])\n",
       "tu_2 = ('bar', 'foo')\n",
-      "print tu + tu_2"
+      "print (tu + tu_2)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "23\n",
+        "abc\n",
+        "(23, 'abc', 4.56)\n",
+        "(23, 'abc', 4.56, (2, 3), 'def', 'bar', 'foo')\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -292,7 +385,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -306,13 +400,24 @@
      "collapsed": false,
      "input": [
       "a = ['spam', 'eggs', 100, 1234] \n",
-      "print a[1:-1]\n",
-      "print a[:2] + ['bacon', 2*2]\n",
-      "print 3*a[:3] + ['Boe!']"
+      "print (a[1:-1])\n",
+      "print (a[:2] + ['bacon', 2*2])\n",
+      "print (3*a[:3] + ['Boe!'])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['eggs', 100]\n",
+        "['spam', 'eggs', 'bacon', 4]\n",
+        "['spam', 'eggs', 100, 'spam', 'eggs', 100, 'spam', 'eggs', 100, 'Boe!']\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -335,15 +440,26 @@
      "collapsed": false,
      "input": [
       "a.append('foo')\n",
-      "print a\n",
+      "print (a)\n",
       "a.extend(li)\n",
-      "print a\n",
+      "print (a)\n",
       "a.insert(2, 'bar')\n",
-      "print a"
+      "print (a)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['spam', 'eggs', 100, 1234, 'foo']\n",
+        "['spam', 'eggs', 100, 1234, 'foo', 'abc', 34, 4.34, 23]\n",
+        "['spam', 'eggs', 'bar', 100, 1234, 'foo', 'abc', 34, 4.34, 23]\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -359,16 +475,27 @@
      "collapsed": false,
      "input": [
       "del(a[0])\n",
-      "print a\n",
+      "print (a)\n",
       "item = a.pop()\n",
-      "print item\n",
+      "print (item)\n",
       "item = a.pop(1)\n",
-      "print item\n",
+      "print (item)\n",
       "a.remove('foo')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['eggs', 'bar', 100, 1234, 'foo', 'abc', 34, 4.34, 23]\n",
+        "23\n",
+        "bar\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -394,7 +521,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -412,7 +549,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "True"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -428,21 +575,38 @@
      "collapsed": false,
      "input": [
       "for letter in 'Python':\n",
-      "   print 'Current Letter :', letter\n",
+      "   print ('Current Letter :', letter)\n",
       "\n",
       "fruits = ['banana', 'apple',  'mango']\n",
       "for fruit in fruits:\n",
-      "   print 'Current fruit :', fruit"
+      "   print ('Current fruit :', fruit)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Current Letter : P\n",
+        "Current Letter : y\n",
+        "Current Letter : t\n",
+        "Current Letter : h\n",
+        "Current Letter : o\n",
+        "Current Letter : n\n",
+        "Current fruit : banana\n",
+        "Current fruit : apple\n",
+        "Current fruit : mango\n"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<code>range(start, stop)</code> would return a list of integers <code>[start, start+1, ...., stop-1]</code>."
+      "<code>range(start, stop)</code> would return a iterator <code>[start, start+1, ...., stop-1]</code>."
      ]
     },
     {
